# rust-robber

./: README.md  package-lock.json
.github/workflows/: ci.yml
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss  typings.d.ts
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/diagnostic/: diagnostic.component.html  diagnostic.component.scss  diagnostic.component.ts
frontend/src/app/components/onboarding/: onboarding.component.html  onboarding.component.scss  onboarding.component.ts
frontend/src/app/components/process/: process.component.html  process.component.scss  process.component.ts
frontend/src/app/components/result/: result.component.html  result.component.scss  result.component.ts
frontend/src/app/components/settings/: settings.component.html  settings.component.scss  settings.component.ts
frontend/src/app/layout/: layout.component.html  layout.component.scss  layout.component.ts
frontend/src/app/services/: tauri.service.ts  wizard-state.service.ts
frontend/src/app/types/: models.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: diagnose.rs  mod.rs  robber.rs
src-tauri/src/config/: mod.rs  process_config.rs
src-tauri/src/services/: file_manager.rs  mod.rs  renamer.rs  text_service.rs
src-tauri/src/types/: diagnostic.rs  mod.rs  word_pair.rs
