[package]
name = "vf-robber"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.2.3"
tempfile = "3.5.0"
walkdir = "2.3"
regex = "1.9"
chrono = "0.4"
tauri-plugin-dialog = "2.2.1"
rayon = "1.7"


[[bin]]
name = "vf-robber"
path = "src/main.rs"
